Fix avec le .tolist() et PetitTest était en commentaires