@@ -11,6 +11,7 @@ import java.util.ArrayList;
 import java.util.Collections;
 import java.util.Iterator;
 import java.util.List;
+import java.util.stream.Collectors;
 
 import static com.montaury.mus.jeu.tour.phases.dialogue.choix.TypeChoix.IDOKI;
 import static com.montaury.mus.jeu.tour.phases.dialogue.choix.TypeChoix.KANTA;
@@ -106,7 +107,7 @@ public class Dialogue {
         private final Choix dernierChoix;
 
         public Recapitulatif(List<ChoixJoueur> choix) {
-            mises = choix.stream().filter(choixJoueur -> choixJoueur.choix.type().estUneMise()).toList();
+            mises = choix.stream().filter(choixJoueur -> choixJoueur.choix.type().estUneMise()).collect(Collectors.toList());
             dernierChoix = choix.get(choix.size() - 1).choix;
             pointsEngages = calculerPointsEngages();
         }
